-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for James Simmons <uja.ornl@gmail.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/9226f4b3-5eba-49de-b55c-934d02bd243f
sanity-sec test_31 failed with:
CMD: onyx-82vm1.onyx.whamcloud.com mkdir -p /mnt/lustre CMD: onyx-82vm1.onyx.whamcloud.com mount -t lustre -o user_xattr,flock,network=tcp999 10.240.26.219@tcp999:/lustre /mnt/lustre mount.lustre: mount 10.240.26.219@tcp999:/lustre at /mnt/lustre failed: Invalid argument This may have multiple causes. Is 'lustre' the correct filesystem name? Are the mount options correct? Check the syslog for more info. missing mandatory parameters in NI config: 'interface'Starting client: onyx-82vm1.onyx.whamcloud.com: -o user_xattr,flock,network=tcp999 10.240.26.219@tcp999:/lustre /mnt/lustre CMD: onyx-82vm1.onyx.whamcloud.com mkdir -p /mnt/lustre CMD: onyx-82vm1.onyx.whamcloud.com mount -t lustre -o user_xattr,flock,network=tcp999 10.240.26.219@tcp999:/lustre /mnt/lustre CMD: onyx-82vm4 lctl get_param -n *.MGS*.exports.'10.240.26.216@tcp'.uuid 2>/dev/null | grep -q - sanity-sec test_31: @@@@@@ FAIL: export for 10.240.26.216@tcp on MGS should not exist
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
sanity-sec test_31 - export for